# logutil

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yaml  push.yaml
logutil/: __init__.py
logutil/src/: init_logging.py  init_loguru.py
tests/: test_core.py
