[tool.poetry]
name = "logutil"
version = "0.1.7"
description = "Easy initialization of standard python logging and loguru"
authors = ["Mysterious Ben <datascience@tuta.io>"]
license = "Apache License, Version 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.loguru.dependencies]
loguru = "^0.5"

[tool.poetry.group.notifiers.dependencies]
notifiers = "^1.2"
sentry-sdk = "^1.3"

[tool.poetry.group.all.dependencies]
loguru = "^0.5"
notifiers = "^1.2"
sentry-sdk = "^1.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4"
mypy = "^1.9"
pylint = "^3.1"
black = "^24.3"
pytest = "^8.1"
pre-commit = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 99
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | .ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.pytest.ini_options]
markers = [
    "integration: integration testing (tests require valid credentials and can be slow)",
]
testpaths = [
    "tests",
]
