[metadata]
name = logutil
version = 0.1.3
author = Yaroslav Kopotilov
author_email = datascience@tuta.io
home_page = UNKNOWN
url = https://github.com/mysterious-ben/logutil
description = Easy initialization of standard python logging and loguru
long_description = file: README.md
long_description_content_type = text/markdown
keywords = logging loguru
license = Apache License, Version 2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >= 3.7
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
tests_require =
    pytest

[options.extras_require]
loguru =
    loguru
notifiers =
    notifiers
    sentry_sdk
all =
    loguru
    notifiers
    sentry_sdk

[flake8]
max-line-length = 119
exclude = .git, .eggs, __pycache__, build/, dist/, notebooks/, data/, logs/, artifacts/
